Pagina candidatos representante comite con FOTOS en CARD

--- a/views/personero.pug
+++ b/views/personero.pug
@@ -13,7 +13,7 @@ block contenido
 						img(class="card-img-top imagenCard" src="static/imagenes/candidatos/carita_feliz.jpg" alt="carita_feliz")
 						div(class="card-body")
 							h5(class="card-title") CARITA FELIZ
-							p(p class="card-text") Vota por mí
+							p(class="card-text") Vota por mí
 
 				div(class="tarjeton")
 					div(class="votarPersonero")
