Guarda en BD rep_comite - personero - representante

--- a/views/personero.pug
+++ b/views/personero.pug
@@ -26,6 +26,7 @@ block contenido
 							p(p class="card-text") Vota por mí
 		else
 			h3 Personero(a)
+			p El(La) personero(a) estudiantil es un alumno del último grado (11) que se encarga de promover el ejercicio de los deberes y derechos de los estudiantes tal y como lo contempla la Constitución Política del país, elegido democráticamente como lo dice el manual de convivencia.
 			if nom_sede == "CASCAJAL"
 				a(class="nav-link" href="sedeIECascajal") << Volver
 				if conRepresentante == 1
