--- a/views/representanteComiteEstudiantil.pug
+++ b/views/representanteComiteEstudiantil.pug
@@ -8,7 +8,7 @@ block contenido
 				div(class="tarjeton")
 					div(class="votarPersonero")
 						form(action="/finalProcesoVotacion" method="POST")
-							input(type="submit" value="1" name="personero"  class="btnVotarPersonero")
+							input(type="submit" value="1" name="representante_comite"  class="btnVotarPersonero")
 					div(class="card" style="width: 12rem;")
 						img(class="card-img-top imagenCard" src="static/imagenes/candidatos/carita_feliz.jpg" alt="carita_feliz")
 						div(class="card-body")
@@ -18,7 +18,7 @@ block contenido
 				div(class="tarjeton")
 					div(class="votarPersonero")
 						form(action="/finalProcesoVotacion" method="POST")
-							input(type="submit" value="2" name="personero"  class="btnVotarPersonero")
+							input(type="submit" value="2" name="representante_comite"  class="btnVotarPersonero")
 					div(class="card" style="width: 12rem;")
 						img(class="card-img-top imagenCard" src="static/imagenes/candidatos/carita_triste.jpg" alt="carita_triste")
 						div(class="card-body")
@@ -33,8 +33,8 @@ block contenido
 						for representante_comite in representantes_comite
 							div(class="tarjeton")
 								div(class="votarPersonero")
-									form(action="/representante" method="POST")
-										input(type="submit" value=representante_comite.est_num_tarjeton name="personero" class="btnVotarPersonero")
+									form(action="/personero" method="POST")
+										input(type="submit" value=representante_comite.est_num_tarjeton name="representante_comite" class="btnVotarPersonero")
 								div(class="card" style="width: 12rem;")
 									img(class="card-img-top imagenCard" src="static/imagenes/candidatos/representante_comite/"+representante_comite.est_foto alt="Foto personero")
 									div(class="card-body")
@@ -43,8 +43,8 @@ block contenido
 
 						div(class="tarjeton")
 							div(class="votarPersonero")
-								form(action="/representante" method="POST")
-									input(type="submit" value="0" name="personero"  class="btnVotarPersonero")
+								form(action="/personero" method="POST")
+									input(type="submit" value="0" name="representante_comite"  class="btnVotarPersonero")
 							div(class="card" style="width: 12rem;")
 								img(class="card-img-top imagenCard" src="static/imagenes/candidatos/voto blanco.jpg" alt="Card image cap")
 								div(class="card-body")
@@ -56,7 +56,7 @@ block contenido
 							div(class="tarjeton")
 								div(class="votarPersonero")
 									form(action="/finalProcesoVotacion" method="POST")
-										input(type="submit" value=representante_comite.est_num_tarjeton name="personero" class="btnVotarPersonero")
+										input(type="submit" value=representante_comite.est_num_tarjeton name="representante_comite" class="btnVotarPersonero")
 								div(class="card" style="width: 12rem;")
 									img(class="card-img-top imagenCard" src="static/imagenes/candidatos/representante_comite/"+representante_comite.est_foto alt="Foto personero")
 									div(class="card-body")
@@ -66,7 +66,7 @@ block contenido
 						div(class="tarjeton")
 							div(class="votarPersonero")
 								form(action="/finalProcesoVotacion" method="POST")
-									input(type="submit" value="0" name="personero"  class="btnVotarPersonero")
+									input(type="submit" value="0" name="representante_comite"  class="btnVotarPersonero")
 							div(class="card" style="width: 12rem;")
 								img(class="card-img-top imagenCard" src="static/imagenes/candidatos/voto blanco.jpg" alt="Card image cap")
 								div(class="card-body")
@@ -94,7 +94,7 @@ block contenido
 						div(class="tarjeton")
 							div(class="votarPersonero")
 								form(action="/finalProcesoVotacion" method="POST")
-									input(type="submit" value=representante_comite.est_num_tarjeton name="personero" class="btnVotarPersonero")
+									input(type="submit" value=representante_comite.est_num_tarjeton name="representante_comite" class="btnVotarPersonero")
 							div(class="card" style="width: 12rem;")
 								img(class="card-img-top imagenCard" src="static/imagenes/candidatos/representante_comite/"+representante_comite.est_foto alt="Foto personero")
 								div(class="card-body")
@@ -104,7 +104,7 @@ block contenido
 					div(class="tarjeton")
 						div(class="votarPersonero")
 							form(action="/finalProcesoVotacion" method="POST")
-								input(type="submit" value="0" name="personero"  class="btnVotarPersonero")
+								input(type="submit" value="0" name="representante_comite"  class="btnVotarPersonero")
 						div(class="card" style="width: 12rem;")
 							img(class="card-img-top imagenCard" src="static/imagenes/candidatos/voto blanco.jpg" alt="Card image cap")
 							div(class="card-body")
