--- a/views/reportes.pug
+++ b/views/reportes.pug
@@ -13,6 +13,7 @@ block contenido
 							tr(class="centrar")
 								th(class="th-candidato") Sede
 								th(class="th-candidato") Grupo
+								th(class="th-candidato") Nombre
 								th(class="th-candidato") No. Personero
 								th(class="th-candidato") Cantidad de votos
 						tbody
@@ -21,6 +22,7 @@ block contenido
 									tr
 										td(class="td-personero centrar")= reporte_personero._id.sede
 										td(class="td-personero centrar")= reporte_personero._id.grupo
+										td(class="td-personero centrar")= reporte_personero._id.nombre_personero
 										td(class="td-personero centrar")= reporte_personero._id.personero
 										td(class="td-personero centrar")= reporte_personero.cantidad
 			h5 Total votos por representantes: 
@@ -34,6 +36,7 @@ block contenido
 							tr(class="centrar")
 								th(class="th-candidato") Sede
 								th(class="th-candidato") Grupo
+								th(class="th-candidato") Nombre
 								th(class="th-candidato") No. Representante
 								th(class="th-candidato") Cantidad de votos
 						tbody
@@ -43,6 +46,7 @@ block contenido
 										tr
 											td(class="td-personero centrar")= reporte_representante._id.sede
 											td(class="td-personero centrar")= reporte_representante._id.grupo
+											td(class="td-personero centrar")= reporte_representante._id.nombre_representante
 											td(class="td-personero centrar")= reporte_representante._id.representante
 											td(class="td-personero centrar")= reporte_representante.cantidad
 			h5 Total votos por personeros: 
