Votaciones para IECascajal funciona bien

--- a/views/representanteComiteEstudiantil.pug
+++ b/views/representanteComiteEstudiantil.pug
@@ -49,8 +49,8 @@ block contenido
 								img(class="card-img-top imagenCard" src="static/imagenes/candidatos/voto blanco.jpg" alt="Card image cap")
 								div(class="card-body")
 									h5(class="card-title") VOTO EN BLANCO
-									p(p class="card-text") Vota por mí
-				else				
+									p(class="card-text") Vota por mí
+				else
 					div(class="row")
 						for representante_comite in representantes_comite
 							div(class="tarjeton")
