--- a/views/reportes.pug
+++ b/views/reportes.pug
@@ -7,6 +7,30 @@ block contenido
 			div(class="separar")
 			div(class="row")
 				div(class="col-sm-12")
+					h5 Resultado de votaciones por Representante al Comité
+					table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
+						thead(class='thead-light')
+							tr(class="centrar")
+								th(class="th-candidato") Sede
+								th(class="th-candidato") Grupo
+								th(class="th-candidato") Nombre
+								th(class="th-candidato") No. Representante Comité
+								th(class="th-candidato") Cantidad de votos
+						tbody
+							for reporte_representante_comite in reporte_representantes_comite
+								if reporte_representante_comite._id.representante_comite != -1
+									if reporte_representante_comite._id.sede == nom_sede
+										tr
+											td(class="td-personero centrar")= reporte_representante_comite._id.sede
+											td(class="td-personero centrar")= reporte_representante_comite._id.grupo
+											td(class="td-personero centrar")= reporte_representante_comite._id.nombre_representante_comite
+											td(class="td-personero centrar")= reporte_representante_comite._id.representante_comite
+											td(class="td-personero centrar")= reporte_representante_comite.cantidad
+			h5 Total votos por representantes del Comité: 
+				span= total_representantes_comite			
+			div(class="separar")
+			div(class="row")
+				div(class="col-sm-12")
 					h5 Resultado de votaciones por personero
 					table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
 						thead(class='thead-light')
@@ -18,15 +42,16 @@ block contenido
 								th(class="th-candidato") Cantidad de votos
 						tbody
 							for reporte_personero in reporte_personeros
-								if reporte_personero._id.sede == nom_sede
-									tr
-										td(class="td-personero centrar")= reporte_personero._id.sede
-										td(class="td-personero centrar")= reporte_personero._id.grupo
-										td(class="td-personero centrar")= reporte_personero._id.nombre_personero
-										td(class="td-personero centrar")= reporte_personero._id.personero
-										td(class="td-personero centrar")= reporte_personero.cantidad
-			h5 Total votos por representantes: 
-				span= total_representantes
+								if reporte_personero._id.personero != -1
+									if reporte_personero._id.sede == nom_sede
+										tr
+											td(class="td-personero centrar")= reporte_personero._id.sede
+											td(class="td-personero centrar")= reporte_personero._id.grupo
+											td(class="td-personero centrar")= reporte_personero._id.nombre_personero
+											td(class="td-personero centrar")= reporte_personero._id.personero
+											td(class="td-personero centrar")= reporte_personero.cantidad
+			h5 Total votos por personero: 
+				span= total_personeros
 			div(class="separar")
 			div(class="row")
 				div(class="col-sm-12")
@@ -49,5 +74,5 @@ block contenido
 											td(class="td-personero centrar")= reporte_representante._id.nombre_representante
 											td(class="td-personero centrar")= reporte_representante._id.representante
 											td(class="td-personero centrar")= reporte_representante.cantidad
-			h5 Total votos por personeros: 
-				span= total_personeros
+			h5 Total votos por representante: 
+				span= total_representantes
