--- a/views/personero.pug
+++ b/views/personero.pug
@@ -50,8 +50,8 @@ block contenido
 								img(class="card-img-top imagenCard" src="static/imagenes/candidatos/voto blanco.jpg" alt="Card image cap")
 								div(class="card-body")
 									h5(class="card-title") VOTO EN BLANCO
-									p(p class="card-text") Vota por mí
-				else				
+									p(class="card-text") Vota por mí
+				else
 					div(class="row")
 						for personero in personeros
 							div(class="tarjeton")
