Eleccion Representante Consejo Estudiantil, Personero y Representante Consejo Estudiantil

--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -28,6 +28,21 @@ footer p {
 	text-align: center;
 }
 
+h1 {
+	color: #563B7E;
+	font-weight: bold;
+}
+
+h3 {
+	color: #054857;
+	font-weight: bold;
+}
+
+h5 {
+	color: #00A9A8;
+	font-weight: bold;
+}
+
 h4, h6 {
 	color: white;
 	text-align: center;
