--- a/views/reportes.pug
+++ b/views/reportes.pug
@@ -3,20 +3,20 @@ extends ./layoutSedes.pug
 block contenido
 	div(class="container justify-content-center")
 		div(class="col-sm-12")
-			h3= "Reporte de votación sede " + nom_sede
+			//- h1= "Reporte de votación sede " + nom_sede
 			div(class="separar")
 			div(class="row")
 				div(class="col-sm-12")
-					h5 Resultado de votaciones por Representante al Comité
+					h3 Resultado de votaciones por Representante al Comité
 					table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
-						thead(class='thead-light')
+						thead(class='thead-light table-bordered')
 							tr(class="centrar")
 								th(class="th-candidato") Sede
 								th(class="th-candidato") Grupo
 								th(class="th-candidato") Nombre
 								th(class="th-candidato") No. Representante Comité
 								th(class="th-candidato") Cantidad de votos
-						tbody
+						tbody(class="table-bordered")
 							for reporte_representante_comite in reporte_representantes_comite
 								if reporte_representante_comite._id.representante_comite != -1
 									if reporte_representante_comite._id.sede == nom_sede
@@ -26,12 +26,23 @@ block contenido
 											td(class="td-personero centrar")= reporte_representante_comite._id.nombre_representante_comite
 											td(class="td-personero centrar")= reporte_representante_comite._id.representante_comite
 											td(class="td-personero centrar")= reporte_representante_comite.cantidad
-			h5 Total votos por representantes del Comité: 
-				span= total_representantes_comite			
+					table(class='table table-hover table-striped table-responsive' style='width: 100%')
+						thead(class='thead-light table-bordered')
+							tr(class="centrar")
+								th(class="th-candidato") Representante de Comité
+								th(class="th-candidato") Cantidad de votos
+						tbody
+							for resumen_rep_comite in resumen_total_representantes_comite
+								tr(class="table-warning")
+									td(class="td-personero centrar")= resumen_rep_comite[0]
+									td(class="td-personero centrar")= resumen_rep_comite[1]
+					h5 Total votos por representantes del Comité: 
+						span= total_representantes_comite			
+			div(class="separar")
 			div(class="separar")
 			div(class="row")
 				div(class="col-sm-12")
-					h5 Resultado de votaciones por personero
+					h3 Resultado de votaciones por personero
 					table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
 						thead(class='thead-light')
 							tr(class="centrar")
@@ -50,12 +61,24 @@ block contenido
 											td(class="td-personero centrar")= reporte_personero._id.nombre_personero
 											td(class="td-personero centrar")= reporte_personero._id.personero
 											td(class="td-personero centrar")= reporte_personero.cantidad
+			//- h5 Resumen votación Personeros 
+			table(class='table table-hover table-striped table-responsive' style='width: 100%')
+				thead(class='thead-dark')
+					tr(class="centrar")
+						th(class="th-candidato") Personero
+						th(class="th-candidato") Cantidad de votos
+				tbody
+					for resumen_personero in resumen_total_personeros
+						tr(class="table-success table-bordered")
+							td(class="td-personero centrar")= resumen_personero[0]
+							td(class="td-personero centrar")= resumen_personero[1]
 			h5 Total votos por personero: 
 				span= total_personeros
 			div(class="separar")
+			div(class="separar")
 			div(class="row")
 				div(class="col-sm-12")
-					h5 Resultado de votaciones por representante
+					h3 Resultado de votaciones por representante
 					table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
 						thead(class='thead-light')
 							tr(class="centrar")
@@ -74,5 +97,16 @@ block contenido
 											td(class="td-personero centrar")= reporte_representante._id.nombre_representante
 											td(class="td-personero centrar")= reporte_representante._id.representante
 											td(class="td-personero centrar")= reporte_representante.cantidad
+					//- h5 Resumen votación representantes 
+					table(class='table table-hover table-striped table-responsive' style='width: 100%')
+						thead(class='thead-dark')
+							tr(class="centrar")
+								th(class="th-candidato") Representante
+								th(class="th-candidato") Cantidad de votos
+						tbody
+							for resumen_representante in resumen_total_representantes
+								tr(class="table-success table-bordered")
+									td(class="td-personero centrar")= resumen_representante[0]
+									td(class="td-personero centrar")= resumen_representante[1]
 			h5 Total votos por representante: 
 				span= total_representantes
