PASO_1 - Inicio de cambio representante Comite->Representante Consejo Directivo

--- a/views/representanteComiteEstudiantil.pug
+++ b/views/representanteComiteEstudiantil.pug
@@ -25,7 +25,7 @@ block contenido
 							h5(class="card-title") CARITA TRISTE
 							p(p class="card-text") Vota por mí
 		else
-			h3 Representante Comité
+			h3 Representante Consejo Directivo
 			if nom_sede == "CASCAJAL"
 				a(class="nav-link" href="sedeIECascajal") << Volver
 				if conRepresentante == 1
