OK - Modificado CORRECTAMENTE los nombres rep_consejo_directivo rep_consejo_estudiantil REPORTES correctamente OJO reporte CARITAS

--- a/views/reportes.pug
+++ b/views/reportes.pug
@@ -23,7 +23,7 @@ block contenido
 										tr
 											td(class="td-personero centrar")= reporte_representante_comite._id.sede
 											td(class="td-personero centrar")= reporte_representante_comite._id.grupo
-											td(class="td-personero centrar")= reporte_representante_comite._id.nombre_representante_comite
+											td(class="td-personero centrar")= reporte_representante_comite._id.nombre
 											td(class="td-personero centrar")= reporte_representante_comite._id.representante_comite
 											td(class="td-personero centrar")= reporte_representante_comite.cantidad
 					table(class='table table-hover table-striped table-responsive' style='width: 100%')
@@ -58,7 +58,7 @@ block contenido
 										tr
 											td(class="td-personero centrar")= reporte_personero._id.sede
 											td(class="td-personero centrar")= reporte_personero._id.grupo
-											td(class="td-personero centrar")= reporte_personero._id.nombre_personero
+											td(class="td-personero centrar")= reporte_personero._id.nombre
 											td(class="td-personero centrar")= reporte_personero._id.personero
 											td(class="td-personero centrar")= reporte_personero.cantidad
 			//- h5 Resumen votación Personeros 
@@ -94,7 +94,7 @@ block contenido
 										tr
 											td(class="td-personero centrar")= reporte_representante._id.sede
 											td(class="td-personero centrar")= reporte_representante._id.grupo
-											td(class="td-personero centrar")= reporte_representante._id.nombre_representante
+											td(class="td-personero centrar")= reporte_representante._id.nombre
 											td(class="td-personero centrar")= reporte_representante._id.representante
 											td(class="td-personero centrar")= reporte_representante.cantidad
 					//- h5 Resumen votación representantes 
