OJO verificar si elecciones estan bien o ESTAN TROCADAS

--- a/views/reportes.pug
+++ b/views/reportes.pug
@@ -37,7 +37,9 @@ block contenido
 									td(class="td-personero centrar")= resumen_rep_comite[0]
 									td(class="td-personero centrar")= resumen_rep_comite[1]
 					h5 Total votos por representantes del Consejo Directivo: 
-						span= total_representantes_comite			
+						span= total_representantes_comite
+					p 
+						strong >> NOTA No se cuentan las votaciones de grados PREESCOLAR, PRIMERO Y SEGUNDO			
 			div(class="separar")
 			div(class="separar")
 			div(class="row")
