--- a/views/reportes.pug
+++ b/views/reportes.pug
@@ -3,8 +3,6 @@ extends ./layoutSedes.pug
 block contenido
 	div(class="container justify-content-center")
 		div(class="col-sm-12")
-			//- h1= "Reporte de votación sede " + nom_sede
-			//- div(class="separar")
 			div(class="row")
 				div(class="col-sm-12")
 					h3 Votaciones PREESCOLAR, PRIMERO y SEGUNDO
@@ -18,8 +16,8 @@ block contenido
 								th(class="th-candidato") Cantidad de votos
 						tbody(class="table-bordered")
 							for reporte_representante_comite in reporte_representantes_comite
-								if reporte_representante_comite._id.nombre == "CARITA FELIZ" || reporte_representante_comite._id.nombre == "CARITA TRISTE"
-									if reporte_representante_comite._id.sede == nom_sede
+								if (reporte_representante_comite._id.nombre == "CARITA FELIZ" || reporte_representante_comite._id.nombre == "CARITA TRISTE")
+									if (reporte_representante_comite._id.sede == nom_sede)
 										tr
 											td(class="td-personero centrar")= reporte_representante_comite._id.sede
 											td(class="td-personero centrar")= reporte_representante_comite._id.grupo
@@ -107,39 +105,40 @@ block contenido
 							td(class="td-personero centrar")= resumen_personero[1]
 			h5 Total votos por personero: 
 				span= total_personeros
-			div(class="separar")
-			div(class="separar")
-			div(class="row")
-				div(class="col-sm-12")
-					h3 Resultado de votaciones por Representante al Consejo Estudiantil
-					table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
-						thead(class='thead-light table-bordered')
-							tr(class="centrar")
-								th(class="th-candidato") Sede
-								th(class="th-candidato") Grupo
-								th(class="th-candidato") Nombre
-								th(class="th-candidato") No. Representante
-								th(class="th-candidato") Cantidad de votos
-						tbody(class="table-bordered")
-							for reporte_representante in reporte_representantes
-								if reporte_representante._id.representante != -1
-									if reporte_representante._id.sede == nom_sede
-										tr
-											td(class="td-personero centrar")= reporte_representante._id.sede
-											td(class="td-personero centrar")= reporte_representante._id.grupo
-											td(class="td-personero centrar")= reporte_representante._id.nombre
-											td(class="td-personero centrar")= reporte_representante._id.representante
-											td(class="td-personero centrar")= reporte_representante.cantidad
-					//- h5 Resumen votación representantes 
-					table(class='table table-hover table-striped table-responsive' style='width: 100%')
-						thead(class='thead-light table-bordered')
-							tr(class="centrar")
-								th(class="th-candidato") Representante
-								th(class="th-candidato") Cantidad de votos
-						tbody(class="table-bordered")
-							for resumen_representante in resumen_total_representantes
-								tr(class="table-info table-bordered")
-									td(class="td-personero centrar")= resumen_representante[0]
-									td(class="td-personero centrar")= resumen_representante[1]
-			h5 Total votos por Representante al Consejo Estudiantil: 
-				span= total_representantes
+			if (nom_sede == "CASCAJAL")
+				div(class="separar")
+				div(class="separar")
+				div(class="row")
+					div(class="col-sm-12")
+						h3 Resultado de votaciones por Representante al Consejo Estudiantil
+						table(class='table table-hover table-striped table-condensed table-responsive' style='width: 100%')
+							thead(class='thead-light table-bordered')
+								tr(class="centrar")
+									th(class="th-candidato") Sede
+									th(class="th-candidato") Grupo
+									th(class="th-candidato") Nombre
+									th(class="th-candidato") No. Representante
+									th(class="th-candidato") Cantidad de votos
+							tbody(class="table-bordered")
+								for reporte_representante in reporte_representantes
+									if reporte_representante._id.representante != -1
+										if reporte_representante._id.sede == nom_sede
+											tr
+												td(class="td-personero centrar")= reporte_representante._id.sede
+												td(class="td-personero centrar")= reporte_representante._id.grupo
+												td(class="td-personero centrar")= reporte_representante._id.nombre
+												td(class="td-personero centrar")= reporte_representante._id.representante
+												td(class="td-personero centrar")= reporte_representante.cantidad
+						//- h5 Resumen votación representantes 
+						table(class='table table-hover table-striped table-responsive' style='width: 100%')
+							thead(class='thead-light table-bordered')
+								tr(class="centrar")
+									th(class="th-candidato") Representante
+									th(class="th-candidato") Cantidad de votos
+							tbody(class="table-bordered")
+								for resumen_representante in resumen_total_representantes
+									tr(class="table-info table-bordered")
+										td(class="td-personero centrar")= resumen_representante[0]
+										td(class="td-personero centrar")= resumen_representante[1]
+				h5 Total votos por Representante al Consejo Estudiantil: 
+					span= total_representantes
