--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -235,3 +235,10 @@ h4, h6 {
 	width: 100px;
 	height: 100px;
 }
+
+.clave_erronea {
+	color: #ED561A;
+	font-weight: bold;
+	text-align: center;	
+	border-radius: 5px 5px 5px 5px;
+}
