SOLUCIONANDO... REPORTES solo se deja en poder de Administrador EVITA fallo en el servidor

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,12 @@ body(data-spy="scroll")
 				div(class="col-md-auto")
 					h4 Sistema de elecciones para gobierno escolar
 					h6 Personero y representante
+ul(class="nav nav-tabs justify-content-center")
+	//- 	li(class="nav-item")
+	//- 		a(class="nav-link" href="/reportes") Reportes
+	ul(class="nav nav-tabs justify-content-center")
+		li(class="nav-item")
+			a(class="nav-link" href="/") Cerrar sesión
 	block contenido
 	block footer
 		footer(class="fixed-bottom")
