COD - se agrego nuevos archivos de bases de datos

--- a/views/administrador.pug
+++ b/views/administrador.pug
@@ -5,8 +5,12 @@ block contenido
 		div(class='row')
 			div(class='col-sm-12')
 				div(class="separar")
-				h2(class="centrar") Bienvenido(a) 
 				div(class="separar")
-				h3(class="centrar") Administrador
+				div(class="separar")
+				h3(class="centrar") Bienvenido(a) 
+				div(class="separar")
+				div(class="separar")
+				div(class="separar")
+				h1(class="centrar") Administrador(a)
 				div(class="separar")
 				h5= mensaje
