--- a/views/layoutSedes.pug
+++ b/views/layoutSedes.pug
@@ -17,10 +17,9 @@ body(data-spy="scroll")
 					h4 Sistema de elecciones para gobierno escolar
 					h6 Personero y representante
 
-	//- ul(class="nav nav-tabs justify-content-center")
-	//- 	li(class="nav-item")
-	//- 		a(class="nav-link" href="/reportes") Reportes
 	ul(class="nav nav-tabs justify-content-center")
+		li(class="nav-item")
+			a(class="nav-link" href="/reportes") Reportes
 		li(class="nav-item")
 			a(class="nav-link" href="/") Cerrar sesión	
 	div(class="separar")
